[lworld] Problems with scalarized inline type return and incremental inlining

XMLWordPrintable

      TestCallingConvention spuriously fails with -Xcomp and -XX:-TieredCompilation:

       stderr: [Exception in thread "main" java.lang.reflect.InvocationTargetException
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:565)
      at compiler.valhalla.inlinetypes.InlineTypeTest.run(InlineTypeTest.java:706)
      at compiler.valhalla.inlinetypes.InlineTypeTest.run(InlineTypeTest.java:441)
      at compiler.valhalla.inlinetypes.TestCallingConvention.main(TestCallingConvention.java:77)
      Caused by: java.lang.ArrayIndexOutOfBoundsException: Index -1723252584 out of bounds for length 128
      at java.base/java.lang.Character.valueOf(Character.java:8551)
      at compiler.valhalla.inlinetypes.MyValue3.verify(MyValue3.java:215)
      at compiler.valhalla.inlinetypes.TestCallingConvention.test21_verifier(TestCallingConvention.java:441)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: