8257422: [lworld] Problems with scalarized inline type return and incremental inlining